eks-deployment/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: a9cceb82da901490f8e538e93c9afcfd-1577586792.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: java-app-service
            port:
              number: 8080
